Fix top navbar background color under dark mode

--- a/netbox/project-static/styles/transitional/_navigation.scss
+++ b/netbox/project-static/styles/transitional/_navigation.scss
@@ -36,8 +36,3 @@
     }
   }
 }
-
-// Header menu styling
-header.navbar {
-  background-color: $bg-surface-secondary;
-}
